Hide settings of integrations that are not present